2001-04-12  Oliver Kiddle  <opk@zsh.org>

	* 13958: Completion/Zsh/Type/_directory_stack: a hopefully correct
	fix to avoid appending a / when called from _cd

	* unposted: Completion/Zsh/Command/.distfiles: missed change for 13947

2001-04-12  Clint Adams  <schizo@debian.org>

	* 13955: acconfig.h, configure.in, Src/Modules/terminfo.c:
	s/codes/names/.

	* 13953: acconfig.h, configure.in, Src/Modules/terminfo.c:
	have configure check for the existence of boolcodes,
	numcodes, and strcodes symbols, and presume that they
	are terminfo capability code inventories.

	* 13951: Src/Modules/terminfo.c: make scanterminfo do something
	so that ${(k)terminfo} and ${(kv)terminfo} work.

2001-04-11  Bart Schaefer  <schaefer@zsh.org>

	* 13949: Completion/Zsh/Type/_directory_stack: Don't append a slash
	when completing after [-+]*.
	
	* unposted: Functions/Misc/getjobs: Update comment to reflect
	change in preexec call signature from 13942.

	* unposted (see 13946): Functions/Prompts/prompt_bart_setup: Strip
	%[BSUbsu] from $PS1 when computing the width of the first line.

2001-04-11  Oliver Kiddle  <opk@zsh.org>

	* 13947: Completion/Zsh/Command/_fc, Completion/Zsh/Type/_aliases,
	Completion/Zsh/Type/_jobs_fg, Completion/Zsh/Command/_alias,
	Completion/Zsh/Command/_jobs_builtin: new _alias and _jobs_builtin

2001-04-11  Wayne Davison  <wayned@users.sourceforge.net>

	* 13942: Src/init.c, Doc/Zsh/func.yo: Fixed a bug in the
	calling of "preexec" to prevent the passing of the wrong
	history info as arg #1.  Added 2 extra args with expanded
	command info.  Documented the new calling syntax.

2001-04-11  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 13944: Src/Modules/mapfile.c (from Bart): dupstring the
	parameter name to avoid static buffer re-use problem.

2001-04-10  Wayne Davison  <wayned@users.sourceforge.net>

	* unposted: Src/hist.c: Slightly enhanced should_ignore_line()
	by using getjobtext() instead of getpermtext().
